--- a/os8/Makefile
+++ b/os8/Makefile
@@ -38,7 +38,7 @@ $(KERNEL_BIN): kernel
 
 kernel:
 	@make -C ../user build TEST=$(TEST) CHAPTER=$(CHAPTER) BASE=$(BASE)
-	@cargo build --release --offline
+	@cargo build --release 
 
 clean:
 	@cargo clean
